# flask-starter-app

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
app/: __init__.py  commands.py  config.py  current_app.py  database.py  routes.py
app/blueprints/: hello_world.py
app/exceptions/: __init__.py  base_exc.py  error_handler.py
app/helpers/: __init__.py  jinja.py  number_formats.py  objects.py
app/models/: UserModel.py  __init__.py
config/: gunicorn.conf.py  nginx.conf
tests/: conftest.py
tests/functional/: test_hello_world.py
tests/unit/: test_user_model.py
